// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders correctly 1`] = `
<div
  className="ThemeProvider__Base-sc-1w52cfi-0 fMEevm"
>
  <div
    className="Text__TextElement-sc-z9dcxz-0 hTjRsr"
  >
     Something
     
     
  </div>
</div>
`;

exports[`Text renders fontStyle correctly 1`] = `
<div
  className="ThemeProvider__Base-sc-1w52cfi-0 fMEevm"
>
  <div
    className="Text__TextElement-sc-z9dcxz-0 dewSvx"
  >
     Something 
  </div>
</div>
`;
